--- a/src/app/components/home/enrollment/enrollmentinfo/enrollmentinfo.component.html
+++ b/src/app/components/home/enrollment/enrollmentinfo/enrollmentinfo.component.html
@@ -1,7 +1,130 @@
 <section class="backlink-header mob-check account-setting-upperBar">
     <div class="container">
         <div class="row">
+            <div class="col-sm-12 col-md-12 col-lg-12 show-deskk">
+                <div [className]="sidebartoggle1 ?  'hidesidebar toggle-sidebar hidden-lg' : 'showsidebar toggle-sidebar hidden-lg'">
+                    <div class="cart-sidebar sidebar-collapse">
+                        <div class="sidebar-head">
+                            <h2>
+                                <a (click)="toggleShow()"> <span class="arrow-down">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="11.2" height="6.6"
+                                            viewBox="0 0 11.2 6.6">
+                                            <path id="Path_2040" data-name="Path 2040"
+                                                d="M541.8,7l-3.9,3.9L534,7a.967.967,0,0,0-1.4,0,.967.967,0,0,0,0,1.4l4.6,4.6a.967.967,0,0,0,1.4,0l4.6-4.6A.99.99,0,1,0,541.8,7Z"
+                                                transform="translate(-532.3 -6.7)" fill="#1cb1c5" />
+                                        </svg>
+                                    </span><span class="down-ext">Hide Order Summary</span><span class="left-ext">Show
+                                        Order Summary</span></a>
+                            </h2>
+                            <span class="amount-summary"> $40.00 </span>
+                        </div>
+                    </div>
+                </div>
+
+                <div *ngIf="sidebartoggle1" class="sidebar-ui">
+                    <ngb-accordion activeIds="enter-payment">
+                        <ngb-panel id="refered-sidebar">
+                            <ng-template ngbPanelTitle>
+                                <div class="heading-step1">
+                                    <h4>Your Enroller</h4>
+                                    <span *ngIf="!toShowData" class="vali-promo">Amanda Walsh, ID#42</span>
+                                    <p *ngIf="toShowData" class="Refered-value mb-0"></p>
+                                    <span class="arrow-stepp">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="6.6" height="11.2"
+                                                viewBox="0 0 6.6 11.2">
+                                                <path id="Path_2044" data-name="Path 2044"
+                                                    d="M630.9,4.7a.967.967,0,0,0,0,1.4l3.9,3.9-3.9,3.9a.99.99,0,0,0,1.4,1.4l4.6-4.6a.967.967,0,0,0,0-1.4l-4.6-4.6A.967.967,0,0,0,630.9,4.7Z"
+                                                    transform="translate(-630.6 -4.4)" />
+                                            </svg>
+                                        </span>
+                                </div>
+                            </ng-template>
+                            <ng-template ngbPanelContent>
+                                <div class="search-box">
+                                    <div class="search-bar-on">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control personalInfo" (click)="open(referr_user)" value="" placeholder="Find referral (Optional)" />
+                                            <span class="search"><svg xmlns="http://www.w3.org/2000/svg"
+                                                        width="16.947" height="17.048" viewBox="0 0 16.947 17.048">
+                                                        <path id="Path_2019" data-name="Path 2019"
+                                                            d="M151.4,12a4.5,4.5,0,1,1,4.5-4.5A4.481,4.481,0,0,1,151.4,12Zm6,0h-.8l-.3-.3a6.593,6.593,0,0,0,1.5-5.3,6.471,6.471,0,0,0-5.6-5.3,6.53,6.53,0,0,0-2,12.9,6.593,6.593,0,0,0,5.3-1.5l.3.3v.8l4.2,4.2a1.061,1.061,0,0,0,1.5-1.5Z"
+                                                            transform="translate(-144.853 -1.052)" />
+                                                    </svg>
+                                                </span>
+                                            <div class="req">
+                                                <label class="control-label visible-xs required requiredField" for="Customer_MainAddress_City"></label>
+                                            </div>
+                                        </div>
+                                        <span class="text-value">Customer ID, First or Last Name</span>
+                                    </div>
+                                </div>
+                            </ng-template>
+                        </ngb-panel>
+                        <ngb-panel id="today-order-sidebar">
+                            <ng-template ngbPanelTitle>
+                                <div class="heading-step1">
+                                    <h4>Today's Order</h4>
+                                    <!-- <p>{{itemDescription}}</p> -->
+                                    <!-- <div class="content-card steps-inner today-order">
+                                            <table>
+                                                <tbody>
+                                                    <tr>
+                                                        <td>{{itemDescription}}</td>
+                                                        <td>${{cartSummaryTotal | number:'.2'}}</td>
+                                                    </tr>
+                                                    <hr>
+                                                </tbody>
+                                                <tfoot>
+
+
+                                                    <tr>
+                                                        <td>Total</td>
+                                                        <td>${{cartSummaryTotal | number:'.2'}}</td>
+                                                    </tr>
+                                                </tfoot>
+                                            </table>
+                                        </div> -->
+                                    <span class="arrow-stepp">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="6.6" height="11.2"
+                                                viewBox="0 0 6.6 11.2">
+                                                <path id="Path_2044" data-name="Path 2044"
+                                                    d="M630.9,4.7a.967.967,0,0,0,0,1.4l3.9,3.9-3.9,3.9a.99.99,0,0,0,1.4,1.4l4.6-4.6a.967.967,0,0,0,0-1.4l-4.6-4.6A.967.967,0,0,0,630.9,4.7Z"
+                                                    transform="translate(-630.6 -4.4)" />
+                                            </svg>
+                                        </span>
+                                </div>
+                            </ng-template>
+                            <ng-template ngbPanelContent>
+                                <div class="content-card steps-inner today-order">
+                                    <table>
+                                        <tbody>
+                                            <tr>
+                                                <td>{{itemDescription}}</td>
+                                                <td>${{cartSummaryTotal | number:'.2'}}</td>
+                                            </tr>
+                                            <hr>
+                                        </tbody>
+                                        <tfoot>
+
+
+                                            <tr>
+                                                <td>Total</td>
+                                                <td>${{cartSummaryTotal | number:'.2'}}</td>
+                                            </tr>
+                                        </tfoot>
+                                    </table>
+                                </div>
+                            </ng-template>
+                        </ngb-panel>
+                    </ngb-accordion>
+
+
+
+                </div>
+            </div>
+
             <div class="col-lg-8 col-md-12 back-link mb-4">
+
                 <a [routerLink]="['/store/cart']"><svg aria-hidden="true" focusable="false" data-prefix="far"
                         data-icon="angle-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 512"
                         class="svg-inline--fa fa-angle-left fa-w-6 fa-3x">
@@ -394,6 +517,7 @@
                                                                                                         City is required
                                                                                                     </div>
                                                                                                 </div>
+
                                                                                                 <div class="req">
                                                                                                     <label class="control-label visible-xs required requiredField" for="Customer_MainAddress_City"></label>
                                                                                                 </div>
@@ -963,14 +1087,7 @@
                                                     <ng-template ngbPanelTitle>
                                                         <div class="heading-step1">
                                                             <h4>Card</h4>
-                                                            <!-- <span class="arrow-stepp">
-                                                                <svg xmlns="http://www.w3.org/2000/svg" width="6.6"
-                                                                    height="11.2" viewBox="0 0 6.6 11.2">
-                                                                    <path id="Path_2044" data-name="Path 2044"
-                                                                        d="M630.9,4.7a.967.967,0,0,0,0,1.4l3.9,3.9-3.9,3.9a.99.99,0,0,0,1.4,1.4l4.6-4.6a.967.967,0,0,0,0-1.4l-4.6-4.6A.967.967,0,0,0,630.9,4.7Z"
-                                                                        transform="translate(-630.6 -4.4)" />
-                                                                </svg>
-                                                            </span> -->
+
                                                         </div>
                                                     </ng-template>
                                                     <ng-template ngbPanelContent>
@@ -994,10 +1111,11 @@
                                                                             <div class="req">
                                                                                 <label class="control-label visible-xs required requiredField" for="Customer_MainAddress_City">*Required</label>
                                                                             </div>
-
                                                                         </div>
+
+
                                                                     </div>
-                                                                    <div class="col-md-12">
+                                                                    <div class="col-md-12 pinfo">
                                                                         <div class="form-group">
                                                                             <input type="text" formControlName="cardNumber" [showMaskTyped]="false" [dropSpecialCharacters]="false" mask="0000 0000 0000 0000" (change)="creditCardValidator($event)" placeholder="Card number" name="cardNumber" class="form-control" [ngClass]="{ 'is-invalid': paymentSubmitted && p.cardNumber?.errors }"
                                                                             />
@@ -1014,12 +1132,14 @@
                                                                             <div class="req">
                                                                                 <label class="control-label visible-xs required requiredField" for="Customer_MainAddress_City">*Required</label>
                                                                             </div>
+
                                                                         </div>
+
                                                                     </div>
                                                                 </div>
                                                                 <div class="row">
                                                                     <div class="cityndState">
-                                                                        <div class="col-sm-6">
+                                                                        <div class="col-sm-6 pinfo">
                                                                             <div class="form-group">
                                                                                 <input type="text" formControlName="expiryMonth" [(ngModel)]="checkMonth" (change)="validateCard()" [showMaskTyped]="false" [dropSpecialCharacters]="false" mask="00" placeholder="Month" name="expiryMonth" class="form-control" [ngClass]="{ 'is-invalid': paymentSubmitted && p.expiryMonth?.errors }"
                                                                                 />
@@ -1035,7 +1155,7 @@
                                                                                 </div>
                                                                             </div>
                                                                         </div>
-                                                                        <div class="col-sm-6">
+                                                                        <div class="col-sm-6 pinfo">
                                                                             <div class="form-group">
                                                                                 <input type="text" formControlName="expiryYear" [(ngModel)]="checkYear" (change)="validateCard()" placeholder="Year" name="expiryYear" [showMaskTyped]="false" [dropSpecialCharacters]="false" mask="0000" class="form-control" [ngClass]="{ 'is-invalid': paymentSubmitted && p.expiryYear?.errors }"
                                                                                 />
@@ -1050,21 +1170,28 @@
 
                                                                             </div>
                                                                         </div>
+
                                                                     </div>
 
 
-                                                                    <div class="col-md-12">
+                                                                    <div class="col-md-12 pinfo">
                                                                         <div class="form-group">
+                                                                            <div class="req">
+                                                                                <label class="control-label visible-xs required requiredField" for="Customer_MainAddress_City"></label>
+                                                                            </div>
 
                                                                             <input type="text" formControlName="cardCVV" placeholder="CVV" name="cardCVV" [showMaskTyped]="false" [dropSpecialCharacters]="false" mask="000" class="form-control" [ngClass]="{ 'is-invalid': paymentSubmitted && p.cardCVV?.errors }" />
                                                                             <div *ngIf="paymentSubmitted && p.cardCVV?.errors" class="invalid-feedback">
                                                                                 <div *ngIf="p.cardCVV?.errors.required">
                                                                                     card CVV is required</div>
                                                                             </div>
+
                                                                             <div class="req">
                                                                                 <label class="control-label visible-xs required requiredField" for="Customer_MainAddress_City">*Required</label>
                                                                             </div>
                                                                         </div>
+
+
                                                                     </div>
 
                                                                 </div>
@@ -1258,7 +1385,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-4 enrollment-pages  col-lg-pull-4 ">
+            <div class="col-sm-4 enrollment-pages  col-lg-pull-4  desk-sidebar ">
                 <div class="enrollment-page todayOffer">
                     <div class="showsidebar toggle-sidebar hidden-lg">
                         <div class="cart-sidebar sidebar-collapse">
