--- a/src/app/components/store/checkout/checkout.component.html
+++ b/src/app/components/store/checkout/checkout.component.html
@@ -1337,7 +1337,24 @@
                                         </ng-template>
                                     </ngb-panel>
                                 </ngb-accordion>
+
+                                <div class="wraper-congoto">
+                                    <div class="row  congoPara ">
+                                        <div class="col-sm-3 congratssRow">
+                                            <div class="congrats">
+                                                <input type="checkbox">
+                                            </div>
+
+                                        </div>
+                                        <div class="col-sm-8">
+                                            <span>Congratulations on saving money with your subscription Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, aliquam?</span>
+
+                                        </div>
+                                    </div>
+                                </div>
+
                                 <div class="final-cta-bottom">
+
                                     <div class="plce-order-cta">
                                         <button type="submit" (click)="onSubmit()">Place My Order</button>
                                     </div>
