--- a/src/app/components/layout/app-header/app-header.component.css
+++ b/src/app/components/layout/app-header/app-header.component.css
@@ -227,6 +227,12 @@ div#main-menu li ul.search-result li a:hover {
     #main-menu.show-mob {
         display: none;
     }
+    a.nav-link,
+    .Login-demo-tour-class a,
+    .LogOut-demo-tour-class a{
+        font-size: 20px;
+        text-transform: uppercase;
+    }
 }
 
 a.nav-link.active {
