--- a/src/app/components/layout/app-footer/app-footer.component.html
+++ b/src/app/components/layout/app-footer/app-footer.component.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-12 col-lg-3">
                 <div class="footer-menus">
                     <h4>Wink Naturals</h4>
                     <ul>
@@ -14,7 +14,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-12 col-lg-3">
                 <div class="footer-menus">
                     <h4>Contact Us</h4>
                     <ul class="contact Us">
@@ -23,7 +23,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-12 col-lg-3">
                 <div class="footer-menus">
                     <h4>Follow Us</h4>
                     <p class="link-wink">@winknaturals</p>
@@ -34,7 +34,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-12 col-lg-3">
                 <div class="footer-menus">
                     <h4>Referred By</h4>
                     <div class="info-refered"><span><i class="fa fa-user"></i></span> Amanda Walsh,ID #42</div>
