order view detail issue

--- a/src/app/components/auth/account-settings/orders/orders.component.html
+++ b/src/app/components/auth/account-settings/orders/orders.component.html
@@ -101,7 +101,7 @@
                                             </div>
 
                                             <div class="view-invoice">
-                                                <button class="view-invoice-btn" (click)="viewInvoice(268128)">View Invoice</button>
+                                                <button class="view-invoice-btn" (click)="viewInvoice(item.orderID)">View Invoice</button>
                                             </div>
 
                                             <div [innerHTML]="invoiceHtml">
